--- a/src/frontend/pages/FeedPage/feed.module.css
+++ b/src/frontend/pages/FeedPage/feed.module.css
@@ -8,6 +8,11 @@
     display: flex; 
 }
 
+.feedContent{
+    width: calc(100% - 320px);
+    margin: 0;
+}
+
 .unAuthenticatedText {
     color: white;
     font-size: 20px;
