--- a/src/frontend/components/tagsFeed.module.css
+++ b/src/frontend/components/tagsFeed.module.css
@@ -8,8 +8,9 @@
     padding-bottom: 20px;
     background-color: #1e1e1e;
     font-family: 'Inconsolata';
-    width: calc(100% - 250px);
+    width: 100%; 
     margin: 0;
+    box-sizing: border-box;
   }
   
   .searchBar {
