small padding changes

--- a/src/frontend/components/portfolioDisplay.module.css
+++ b/src/frontend/components/portfolioDisplay.module.css
@@ -11,7 +11,7 @@
   border-radius: 8px;
   background-color: #1e1e1e;
   overflow-y: auto; /* Enable vertical scrolling if needed */
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .projectsTitle {
