--- a/src/frontend/components/ProjectEntryPage/projectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/projectEntry.module.css
@@ -82,6 +82,7 @@
   font-weight: 600;
   margin: 0;
   margin-right: 25px;
+  margin-left: 15px; 
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -165,6 +166,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-right: 15px; 
 }
 
 .upvoteButton {
@@ -238,9 +240,10 @@
   background-color: #f4f2f2;
   padding: 5px 10px;
   border-radius: 5px;
-  margin: 10px 0;
+  margin: 20px 0;
   flex-grow: 1;
   width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add this line for drop shadow */
 }
 
 .commentIcon {
@@ -418,3 +421,4 @@
   background-color: #ccc;
   margin: 20px 0; /* Space around the divider */
 }
+
