--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -16,7 +16,7 @@
   align-items: flex-start;
   gap: 20px;
   margin-bottom: 20px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .nameSection {
@@ -57,6 +57,14 @@
 .tagLabel {
   font-weight: bold;
   color: #8fb8d9;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  margin-top:0px;
+  margin-bottom:20px;  /* Space around the divider */
 }
 
 .tag {
@@ -127,6 +135,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px; 
 }
 
 .linkButton {
