--- a/src/frontend/pages/GroupsPage/groupssidebar.module.css
+++ b/src/frontend/pages/GroupsPage/groupssidebar.module.css
@@ -10,6 +10,8 @@
     border-radius: 8px;
     margin: 10px;
     overflow: hidden;
+    position: sticky;
+    top: 10px;
   }
   
   .sidebarHeader {
@@ -47,16 +49,44 @@
   }
   
   .searchContainer {
+    display: inline-flex;
+    align-items: center;
     position: relative;
-    padding: 20px 20px 20px 0px;
+    padding: 10px 20px 20px 0px;
     background-color: none;
+    width: 96%;
     border-bottom: 1px solid #444;
+    margin-bottom: 10px;
+  }
+
+  .searchAndCreate {
+    border-bottom: 1px solid #444;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .createGroupButton {
+    display: inline-flex; 
+    align-items: center;
+    gap: 10px; 
+    background-color: #60a7ff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 5px;
+    margin-bottom: 15px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    width: 100%; 
   }
   
   .searchIcon {
     position: absolute;
     left: 10px;
-    top: 50%;
+    top: 42%;
     transform: translateY(-50%);
     color: #aaa;
   }
@@ -135,8 +165,9 @@
   .groupsList {
     flex-grow: 1;
     overflow-y: auto;
-    padding: 20px;
+    padding: 10px;
     background-color: #333;
+    margin-top: 0px;
   }
   
   .groupsList ul {
@@ -203,6 +234,7 @@
     font-size: 14px;
   }
   
+
   /* Scrollbar styles */
   .groupsList::-webkit-scrollbar {
     width: 8px;
