--- a/src/frontend/components/AddBlocPortfolio.module.css
+++ b/src/frontend/components/AddBlocPortfolio.module.css
@@ -597,3 +597,45 @@
   margin-top: 0; 
   text-align: left;
 }
+
+
+
+.headerButtons {
+  display: flex;
+  align-items: center;
+  gap: 20px; /* Adjust as needed */
+}
+
+.previewButton {
+  background-color: #3498db;
+  display: inline-flex;
+  color: white;
+  padding: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  white-space: nowrap;
+  border: 2px solid #96d5ff;
+  align-items: center;
+}
+
+.previewButton:hover {
+  background-color: #236895;
+  color: white;
+}
+
+.previewModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  z-index: 3000; /* Ensure it's on the highest z-index */
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+}
+
+.modalContent {
+  text-align: center;
+}
