--- a/src/frontend/components/AddBlocPortfolio.module.css
+++ b/src/frontend/components/AddBlocPortfolio.module.css
@@ -106,6 +106,18 @@
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
+.headerTextArea {
+  width: auto;
+  padding: 0.75rem;
+  margin-bottom: 1rem;
+  background-color: var(--input-bg);
+  color: var(--primary-text);
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  font-size: 1rem;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
 .cellTypeSelect {
   cursor: pointer;
   width: 100%;
@@ -612,6 +624,7 @@
   color: white;
   padding: 15px;
   border-radius: 5px;
+  min-height: 10px;
   cursor: pointer;
   font-size: 20px;
   white-space: nowrap;
