--- a/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
+++ b/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
@@ -11,6 +11,22 @@
   gap: 1.5rem;
 }
 
+.textContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.textHeader{
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  padding: 1.5rem 1.5rem 0 1.5rem; 
+}
+
+.textHeader:empty{
+  padding: 0; 
+}
+
 .column {
   flex: 1 1 300px;
   background-color: #fcfbfb;
