--- a/src/frontend/pages/GroupsPage/groups.module.css
+++ b/src/frontend/pages/GroupsPage/groups.module.css
@@ -1,7 +1,8 @@
 /* feed.module.css */
 
 .feedContainer {
-    padding-left: 20px;
+    padding-left: 10px;
+    padding-top: 10px; 
 }
 
 .feedBottomContainer {
