--- a/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
+++ b/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"); 
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
+
+
 /* siloDescription.module.css */
 body, html {
     margin: 0;
@@ -20,7 +25,7 @@ body, html {
 
 .leftContent {
     z-index: 2;
-    margin-top: -35vh; /* Move content up */
+    margin-top: -35vh; 
     max-width: 50%; /* Ensure left content doesn't overflow */
 }
 
@@ -38,6 +43,12 @@ body, html {
     margin-bottom: 0px;
 }
 
+.letters{
+    font-family: "Inconsolata";
+    font-size: 10vw; /* Responsive font size */
+    margin: 10px; 
+}
+
 .aboutHeader {
     font-size: 8vw; /* Responsive font size */
     font-weight: bold;
@@ -49,6 +60,7 @@ body, html {
 
 .helloLine, .worldLine {
     display: flex;
+    font-family: "Jacquard 12", system-ui; 
 }
 
 .aboutHeader span {
