new autofiller function works

--- a/src/frontend/pages/StudentProfilePage/studentProfile.module.css
+++ b/src/frontend/pages/StudentProfilePage/studentProfile.module.css
@@ -215,3 +215,10 @@
     background-color: #8fb8d9;
     border-radius: 3px;
   }
+
+
+  .fileInput {
+    display: block;
+    margin: 20px 0;
+  }
+  
