--- a/src/frontend/components/ProjectEntryPage/smallestProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallestProjectEntry.module.css
@@ -188,6 +188,8 @@
     cursor: pointer;
     color: #333333;
     transition: color 0.2s ease;
+    background-color: red;
+    border-radius: 50px;
   }
   
   .closeButton:hover {
