--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -3,6 +3,7 @@
   padding: 20px;
   border: 1px solid #e0e0e0;
   border-radius: 12px;
+  background-color: #e9eaec;
   background-color: #ffffff;
   color: #333333;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
