--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -107,6 +107,8 @@
 
 .moreTagsContainer:hover .hoverModal {
   display: flex;
+  position: absolute;
+  left: -200%; 
 }
 
 .bioContainer {
@@ -167,12 +169,19 @@
 
 .closeButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  background: white;
+  top: 20px;
+  align-content: center;
+  right: 100px;
+  background: rgb(252, 67, 0);
   border: none;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   cursor: pointer;
+  color: white; 
+  border-radius: 70px;
+}
+
+.closeButton:hover {
+  background: rgb(174, 47, 0);
 }
 
 .tag:hover {
