--- a/src/frontend/components/AddProjectComponent/addProject.module.css
+++ b/src/frontend/components/AddProjectComponent/addProject.module.css
@@ -152,6 +152,18 @@
     font-size: 1rem;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
   }
+
+  .urlInput{
+    width: 95%;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+    background-color: var(--input-bg);
+    color: var(--primary-text);
+    border: 1px solid var(--border-color);
+    border-radius: 4px;
+    font-size: 1rem;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  }
   
   
   .fileInput{
