--- a/src/frontend/pages/LoginPage/passwordReset.module.css
+++ b/src/frontend/pages/LoginPage/passwordReset.module.css
@@ -16,7 +16,8 @@
   }
   
   .modalContent {
-    background-color: #fff;
+    background-color: #727272;
+    color: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -38,6 +39,37 @@
     cursor: pointer;
     color: #333;
   }
+
+  .submitEmail {
+    position: relative !important;
+    width: 100% !important;
+    margin-bottom: 20px !important;
+  }
+  
+  .submitEmail input {
+    width: 100% !important;
+    padding: 12px 12px 12px 40px !important;
+    background-color: #3c3c3c !important;
+    border: none !important;
+    border-radius: 8px !important;
+    color: #E0E0E0 !important;
+    font-family: 'Inconsolata', monospace !important;
+    font-size: 16px !important;
+    transition: background-color 0.3s !important;
+    box-sizing: border-box !important;
+    text-align: center !important;
+  }
+  
+  .submitEmail input::placeholder {
+    color: #A2A2A2 !important;
+    align-items: center; 
+  }
+  
+  .submitEmail input:focus {
+    background-color: #4a4a4a !important;
+    outline: none !important;
+  }
+
   
   .h2 {
     margin-bottom: 20px;
