--- a/src/frontend/pages/LoginPage/login.module.css
+++ b/src/frontend/pages/LoginPage/login.module.css
@@ -56,10 +56,31 @@ body, html {
   font-size: 18px !important;
   font-family: 'Inconsolata', monospace !important;
   margin-bottom: 16px !important;
+  margin-top: 5px; 
   width: 200px !important;
   transition: background-color 0.3s, transform 0.3s !important;
   border: none !important;
   cursor: pointer !important;
+}
+
+.forgotPasswordButton{
+  background-color: #1e1e1e !important;
+  color: white !important;
+  padding: 12px 0 !important;
+  border-radius: 12px !important;
+  text-decoration: none !important;
+  font-size: 14px !important;
+  font-family: 'Inconsolata', monospace !important;
+  margin-bottom: 16px !important;
+  width: 150px !important;
+  transition: background-color 0.3s, transform 0.3s !important;
+  border: none !important;
+  cursor: pointer !important;
+  margin-top: 5px; 
+}
+
+.forgotPasswordButton:hover{
+  background-color: #3d3d3d !important;
 }
 
 .button:hover {
@@ -111,7 +132,7 @@ body, html {
 .inputIcon {
   position: absolute !important;
   left: 12px !important;
-  top: 40% !important;
+  top: 50% !important;
   transform: translateY(-50%) !important;
   color: #A2A2A2 !important;
   font-size: 18px !important;
