--- a/src/frontend/components/ProjectEntryPage/projectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/projectEntry.module.css
@@ -1,6 +1,6 @@
 .projectContainer {
   padding: 20px 35px 20px 35px;
-  border: 1px solid rgba(106, 105, 105,.5);
+  border: 5px solid rgba(30, 127, 255, 0.5);
   border-radius: 8px;
   background-color: #f7f7f7;
   color: #1e1e1e;
