--- a/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
+++ b/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
@@ -19,7 +19,7 @@
 .textHeader{
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: #f4f4f4;
   padding: 1.5rem 1.5rem 0 1.5rem; 
 }
 
@@ -29,7 +29,7 @@
 
 .column {
   flex: 1 1 300px;
-  background-color: #fcfbfb;
+  background-color: #333333;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -46,11 +46,14 @@
 .text, .editableText {
   font-size: 16px;
   line-height: 1.6;
-  color: #333;
+  color: #e8e8e8;
   padding: 1.5rem;
   white-space: pre-wrap;
   flex-grow: 1;
-  background-color: #fcfbfb;
+  background-color: #333333;
+  text-align: justify;
+  margin-left:5px; 
+  margin-right:20px;
 }
 
 .editableText:focus {
@@ -60,13 +63,13 @@
 
 .imageContainer {
   width: 100%;
-  height: 300px;
+  max-height: calc(100% - 20px);
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
   box-sizing: border-box;
-  background-color: #f8f8f8;
+  background-color: #343434;
   position: relative;
   cursor: pointer;
   overflow: hidden;
