--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -1,11 +1,10 @@
 .projectContainer {
   margin: 20px 0;
   padding: 20px;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #4a4a4a;
   border-radius: 12px;
-  background-color: #e9eaec;
-  background-color: #ffffff;
-  color: #333333;
+  background-color: #252525;
+  color: #e0e0e0;
   border: 4px solid rgba(59, 137, 255, 0); 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
@@ -79,7 +78,7 @@
 }
 
 .projectTitle {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 600;
   margin: 0;
   margin-right: 15px;
@@ -110,8 +109,8 @@
 }
 
 .tag {
-  background-color: #e8f0fe;
-  color: #4a90e2;
+  background-color: #4a4a4a;
+  color: #a0c8ff;
   padding: 4px 10px;
   border-radius: 15px;
   font-size: 1rem;
@@ -125,8 +124,8 @@
 
 .divider {
   height: 1px;
-  background-color: #e0e0e0;
-  margin: 15px 0;
+  background-color: #9b9b9b;
+  margin: 20px 0;
 }
 
 .descAndPreviewContainer {
@@ -150,7 +149,8 @@
 
 .description {
   line-height: 2;
-  color: #555;
+  line-height: 2;
+  color: #c0c0c0;
   height: 100%;
   overflow: hidden;
   position: relative;
@@ -158,6 +158,8 @@
   text-justify: inter-word;
   margin-left: 20px;
   margin-right: 20px;
+  font-family: 'Lato';
+  font-size: 18px;
 }
 
 .description::after {
@@ -167,7 +169,7 @@
   left: 0;
   width: 100%;
   height: 50px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
 }
 
 .previewContainer {
@@ -186,7 +188,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
   border-radius: 8px;
   padding: 10px;
   box-sizing: border-box;
@@ -240,15 +241,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #f7f7f7;
+  background-color: #333333;
   padding: 10px 15px;
   border-radius: 8px;
-  margin: 15px 0;
+  margin: 40px 0 15px 0;
   transition: background-color 0.2s ease;
 }
 
 .commentBox:hover {
-  background-color: #f0f0f0;
+  background-color: #575757;
 }
 
 .commentIconContainer {
@@ -263,7 +264,7 @@
 }
 
 .commentText {
-  color: #555;
+  color: #acacac;
   font-size: 1rem;
 }
 
