--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -1,5 +1,5 @@
 .profileContainer {
-  background-color: #323232;
+  background-color: #252525;
   color: #f0f0f0;
   padding: 20px;
   border-radius: 25px;
@@ -28,19 +28,20 @@
 }
 
 .userName {
-  font-size: 28px;
+  font-size: 33px;
   margin: 0 0 5px 0;
   text-align: left;
   letter-spacing: 5px;
 }
 
 .userInfo {
-  font-size: 15px;
+  font-size: 18px;
   margin: 0;
   color: #bbb;
 }
 
 .tagsContainer {
+  margin-top: 15px; 
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -56,32 +57,44 @@
 
 .tagLabel {
   font-weight: bold;
-  color: #8fb8d9;
+  color: #64b5f6;
+  padding: 4px 8px;
+  border-radius: 12px;
+  font-size: 0.85rem;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
 .divider {
   width: 100%;
   height: 1px;
-  background-color: #ccc;
+  background-color: #878787;
   margin-top:0px;
   margin-bottom:20px;  /* Space around the divider */
 }
 
 .tag {
-  background-color: #3a3a3a;
-  color: #f0f0f0;
+  background-color: rgba(100, 181, 246, 0.1);
+  color: #64b5f6;
   padding: 4px 8px;
-  border-radius: 4px;
-  font-size: 14px;
+  border-radius: 12px;
+  font-size: 0.85rem;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
 .moreTagsContainer {
+  background-color: rgba(100, 181, 246, 0.1);
+  color: #64b5f6;
+  padding: 4px 8px;
+  border-radius: 12px;
+  font-size: 0.85rem;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
   position: relative;
 }
 
 .moreButton {
-  background-color: #3a3a3a;
-  color: #f0f0f0;
   padding: 4px 8px;
   border-radius: 4px;
   font-size: 12px;
@@ -120,16 +133,17 @@
   line-height: 1.5;
   margin: 0 0 10px 0;
   text-align: justify;
+  cursor: pointer; 
 }
 
 .bioButton {
-  background: none;
+  background-color: rgba(100, 181, 246, 0.1);
+  border-radius: 40px;
+  padding: 7px; 
   border: none;
   color: #8fb8d9;
   cursor: pointer;
   font-size: 14px;
-  padding: 0;
-  text-decoration: underline;
 }
 
 .linksContainer {
@@ -145,12 +159,12 @@
   display: inline-flex;
   align-items: center;
   gap: 5px;
-  background-color: #3a3a3a;
+  background-color: #34383f;
   color: #f0f0f0;
   text-decoration: none;
-  padding: 6px 10px;
-  border-radius: 4px;
-  font-size: 14px;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 16px;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
