--- a/src/frontend/components/wrappers/handleUpvote.module.css
+++ b/src/frontend/components/wrappers/handleUpvote.module.css
@@ -2,7 +2,7 @@
   display: inline-flex;
   align-items: center;
   gap: 5px;
-  background-color: #ffffff;
+  background-color: #333333;
   border-radius: 20px;
   padding: 0px 15px 0px 12px;
   border: 1px solid rgba(0, 0, 0, 0.1); 
@@ -53,8 +53,9 @@
 
 .upvoteNumber {
   font-size: 16px;
-  font-weight: bold;
-  color: #1a1a1b;
+  font-family: 'Arial';
+  font-weight: bolder;
+  color: #ff4000;
   min-width: 20px;
   text-align: center;
 }
