--- a/src/frontend/components/ProjectEntryPage/projectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/projectEntry.module.css
@@ -13,6 +13,13 @@
   margin-bottom: 15px;
 }
 
+.commentText {
+  color: #b8b8b8;
+  font-size: 1rem;
+  margin: 0; 
+  margin-top: 2px;
+}
+
 .createdByContainer a {
   margin-left: 20px;
   color: #1e1e1e;
@@ -269,7 +276,7 @@
 }
 
 .commentsSection {
-  background-color: #f4f2f2;
+  background-color: #343434;
   padding: 10px;
   border-radius: 5px;
   margin-top: 10px;
@@ -303,7 +310,7 @@
 
 .commentUser {
   font-weight: bold;
-  color: #1e1e1e;
+  color: #c0c0c0;
 }
 
 .commentUpvoteSection {
@@ -328,14 +335,14 @@
 }
 
 .commentUpvoteCount {
-  color: #1e1e1e;
+  color: #ff3c00;
 }
 
 .addCommentSection {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top: 15px;
+  margin-top: 5px;
   width: 100%;
   overflow: hidden;
   box-sizing: border-box;
@@ -343,13 +350,21 @@
 
 .commentInput {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  background-color: #333;
+  color: white; 
+  border: 1px solid #7c7c7c;
+  border-radius: 8px;
   width: 100%;
   resize: vertical;
   box-sizing: border-box;
   max-width: 100%;
+  margin-top: 5px;
   overflow: hidden;
+}
+
+.commentInput:focus {
+  border-color: #70b9e3;
+  outline: none;
 }
 
 .addCommentButton {
