--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -172,6 +172,16 @@
   background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
 }
 
+.previewText::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
+}
+
 .previewContainer {
   flex: 1;
   width: 50%;
@@ -189,7 +199,6 @@
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-  padding: 10px;
   box-sizing: border-box;
   overflow: hidden;
 }
@@ -199,11 +208,13 @@
   max-height: 100%;
   object-fit: contain;
   border-radius: 4px;
+  padding: 10px; 
 }
 
 .previewText {
   line-height: 2;
-  color: #555;
+  line-height: 2;
+  color: #c0c0c0;
   height: 100%;
   overflow: hidden;
   position: relative;
@@ -211,6 +222,9 @@
   text-justify: inter-word;
   margin-left: 20px;
   margin-right: 20px;
+  font-family: 'Lato';
+  font-size: 18px;
+  margin-top: 0px; 
 }
 
 .seeMoreButton {
