fixed issues with small project entries

--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -139,6 +139,12 @@
 .descAndPreviewContainer:hover{
   cursor: pointer;
 }
+.moreButton {
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 12px;
+  cursor: pointer;
+}
 
 .descContainer {
   flex: 1;
