--- a/src/frontend/components/ProjectEntryPage/projectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/projectEntry.module.css
@@ -58,16 +58,17 @@
   display: flex;
   gap: 8px;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: flex-start;
   min-width: 120px;
+  margin-bottom: 15px;;
 }
 
 .tag {
-  background-color: #e8f0fe;
-  color: #4a90e2;
+  background-color: #4a4a4a;
+  color: #84b3e8;
   padding: 4px 10px;
   border-radius: 15px;
-  font-size: 1.2rem;
+  font-size: .9rem;
   font-weight: 500;
   transition: background-color 0.2s ease;
 }
@@ -228,7 +229,7 @@
   background-color: #4a90e2;
   cursor: pointer;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-left: 25px;
   transition: color 0.3s ease;
 }
