--- a/src/frontend/pages/PublicPortfolioPage/publicLayerDisplay.module.css
+++ b/src/frontend/pages/PublicPortfolioPage/publicLayerDisplay.module.css
@@ -155,7 +155,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 9999;
 }
 
 .modalContent {
@@ -166,6 +166,7 @@
   overflow: auto;
   width: 85%; 
   background-color: #2d2d2d;
+  z-index: inherit;
 }
 
 .modalImage {
