--- a/src/frontend/pages/PublicPortfolioPage/publicSmallProjectEntry.module.css
+++ b/src/frontend/pages/PublicPortfolioPage/publicSmallProjectEntry.module.css
@@ -9,18 +9,20 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
-  align-items: flex-start; /* Change from center to flex-start */
-  overflow-y: auto; /* Change from scroll to auto */
-  padding: 5px 0; /* Add some padding to ensure space at the top and bottom */
+  align-items: flex-start;
+  overflow-y: auto;
+  padding: 5px 0;
+  z-index: 1000; /* Add this line */
 }
 
 .popupContent {
   padding: 5px 20px 20px 20px;
   border-radius: 5px;
   position: relative;
-  max-height: 90vh; /* Limit the height to 90% of the viewport height */
-  overflow-y: auto; /* Allow scrolling within the content if it exceeds max-height */
-  margin: auto; /* Center the content vertically if it's shorter than the overlay */
+  max-height: 90vh;
+  overflow-y: auto;
+  margin: auto;
+  z-index: 1001; /* Add this line */
 }
 
 .closeButton {
@@ -110,7 +112,7 @@
   color: #a0c8ff;
   padding: 4px 10px;
   border-radius: 15px;
-  font-size: 1rem;
+  font-size: .9rem;
   font-weight: 500;
   transition: background-color 0.2s ease;
 }
@@ -163,6 +165,16 @@
   background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
 }
 
+.previewText::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
+}
+
 .previewContainer {
   flex: 1;
   width: 50%;
@@ -180,16 +192,19 @@
 }
 
 .previewText {
-  font-size: 0.9rem;
-  color: #e0e0e0;
-  text-align: center;
-  max-height: 200px;
+  line-height: 2;
+  line-height: 2;
+  color: #c0c0c0;
+  height: 100%;
   overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 8;
-  -webkit-box-orient: vertical;
-  width: 100%;
+  position: relative;
+  text-align: justify;
+  text-justify: inter-word;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: 'Lato';
+  font-size: 16px;
+  margin-top: 0px; 
 }
 
 .seeMoreButton {
@@ -215,6 +230,15 @@
   background-color: #5a5a5a;
   color: #ffffff;
 }
+
+
+.moreButton {
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 12px;
+  cursor: pointer;
+}
+
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
