--- a/src/frontend/pages/FeedPage/newFeedSidebar.module.css
+++ b/src/frontend/pages/FeedPage/newFeedSidebar.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 250px;
+    width: 270px;
     height: 100vh;
     background-color: #1a1a1a;
     color: #ffffff;
@@ -9,6 +9,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
     overflow-x: hidden;
+    border: 1px solid #4a4a4a;
+    border-radius: 15px;
   }
   
   .sidebarMenu {
@@ -43,6 +45,12 @@
     border-top: 2px solid #3a3a3a;
     margin: 16px 0;
   }
+
+  .dividerMid {
+    height: 1px;
+    border-top: 2px dashed #3a3a3a;
+    margin: 10px 0 0 0px;
+  }
   
   .groupsHeader {
     display: flex;
@@ -60,9 +68,9 @@
   .searchContainer {
     display: flex;
     align-items: center;
-    width: 85%; 
+    width: 80%; 
     margin-left: 4px;
-    padding: 5px 20px;
+    padding: 2px 20px;
     background-color: #2a2a2a;
     margin-bottom: 5px;
     border-radius: 40px; 
